FIx overflow auto styling to match error messages

--- a/styles/Offline.module.css
+++ b/styles/Offline.module.css
@@ -1,3 +1,6 @@
 .offline {
+    text-align: center;
+    font-size: 50px;
+    margin-top: 20vh;
     overflow: auto;
 }
